--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dnt-cli",
-  "version": "1.0.1-1",
+  "version": "1.0.1",
   "description": "this is for dnt's frontend project cli",
   "main": "index.js",
   "keywords": [
