--- a/package.json
+++ b/package.json
@@ -23,9 +23,16 @@
   },
   "dependencies": {
     "chalk": "^4.1.1",
+    "cli-cursor": "^3.1.0",
+    "cli-table": "^0.3.6",
     "commander": "^7.2.0",
+    "console.table": "^0.10.0",
+    "figures": "^3.2.0",
+    "inquirer": "^8.0.0",
+    "inquirer-table-prompt": "^0.2.1",
     "minimist": "^1.2.5",
-    "progress": "^2.0.3"
+    "progress": "^2.0.3",
+    "rxjs": "^7.0.1"
   },
   "engines": {
     "node": ">=12.16.1"
